--- a/_config.yml
+++ b/_config.yml
@@ -9,10 +9,10 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Jekyll Bootstrap
+title : 无止之地
 tagline: Site Tagline
 author :
-  name : Name Lastname
+  name : liuwx
   email : blah@email.test
   github : username
   twitter : username
