update author attribute

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ pygments: true
 # so be sure to set them if your theme uses them.
 #
 title : 无止之地
-tagline: Site Tagline
+tagline: 无止之地
 author :
   name : liuwx
   email : blah@email.test
